opencli-rs/tui/src/chatwidget/snapshots/opencli_tui__chatwidget__tests__exploring_step1_start_ls.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Inspecting
  └ Listed ls -la
