opencli-rs/tui/src/chatwidget/snapshots/opencli_tui__chatwidget__tests__exploring_step3_start_cat_foo.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Inspecting
  └ Listed ls -la
    Viewed foo.txt
