opencli-rs/tui/src/chatwidget/snapshots/opencli_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Inspected
  └ Listed ls -la
    Viewed foo.txt, bar.txt
