opencli-rs/tui/src/chatwidget/snapshots/opencli_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • opencli-logs.log

› 1. Yes  Share the current OpenCLI session logs with the team for
          troubleshooting.
  2. No

  Press enter to confirm or esc to go back
