opencli-rs/tui/src/chatwidget/snapshots/opencli_tui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui/src/chatwidget/tests.rs
expression: exec_blob
---
╭─ ⏺ Executed ─────────────────────────────────────────────────────────────────╮
│ sleep 1                                                                      │
├──────────────────────────────────────────────────────────────────────────────┤
│ (no output)                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯
