opencli-rs/tui/src/chatwidget/snapshots/opencli_tui__chatwidget__tests__local_image_attachment_history_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
⏺ Viewed Image
  ⎿ example.png
