opencli-rs/tui/src/chatwidget/snapshots/opencli_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"⏺ Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Ask OpenCLI to do anything                                                    "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
